index-cardapio.html

--- a/index-cardapio.html
+++ b/index-cardapio.html
@@ -271,10 +271,10 @@
                 </div>
                 <div id="dishes" >
                     <div class="dish">
-                        <h2 class="section-title">Chás!<i class="fa-solid fa-mug-hot"></i></h2>
+                        <h2 class="section-title"><i class="fa-solid fa-mug-hot"></i></h2>
 
                         <img src="src/image/xicara-cha.png" class="PnG" alt="">
-                        <h3 class="dish-title"><br>
+                        <h3 class="dish-title">Cha!<br>
                             
                         </h3>
                         <h3 class="section-title">Evah Chai latte </h3>
