index-cardapio.html

--- a/index-cardapio.html
+++ b/index-cardapio.html
@@ -269,12 +269,12 @@
                         </h4>
                     </div>
                 </div>
+                <h2 class="section-title">Cha!<i class="fa-solid fa-mug-hot"></i></h2>
                 <div id="dishes" >
                     <div class="dish">
-                        <h2 class="section-title"><i class="fa-solid fa-mug-hot"></i></h2>
 
                         <img src="src/image/xicara-cha.png" class="PnG" alt="">
-                        <h3 class="dish-title">Cha!<br>
+                        <h3 class="dish-title"><br>
                             
                         </h3>
                         <h3 class="section-title">Evah Chai latte </h3>
@@ -283,7 +283,6 @@
                           <br><span class="preco"> R$ 13.00</span>
                         </h4>
                     </div>
-                </div>
                 <div id="dishes" >
                     <div class="dish">
                         <img src="src/image/cha-matte.png" class="PnG" alt="">
