index-cardapio.html

--- a/index-cardapio.html
+++ b/index-cardapio.html
@@ -9,7 +9,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Landing Page EvahCafe Cardápio</title>
 </head>
-    
 <body>
     <header>
         <main id="content">
@@ -283,6 +282,7 @@
                           <br><span class="preco"> R$ 13.00</span>
                         </h4>
                     </div>
+                </div>
                 <div id="dishes" >
                     <div class="dish">
                         <img src="src/image/cha-matte.png" class="PnG" alt="">
@@ -344,5 +344,6 @@
     </header>
     <main>
     </main>
-</body>
+</body>    
+
 </html>
